--- a/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
@@ -1,8 +1,8 @@
 <div class="animate__fadeInUp2">
   <div class="row mb-3">
     <div class="col-md-12">
-      <h1>Dados Pessoais</h1>
-      <hr>
+      <h3 class="mt-3 mb-0">Dados Pessoais</h3>
+      <hr class="my-1">
     </div> <!-- /col-md-12 -->
   </div> <!-- /row -->
   <form autocomplete="off">
@@ -113,8 +113,8 @@
   </form>
   <div class="row">
     <div class="col-md-12">
-      <h1>Endereço Residencial</h1>
-      <hr>
+      <h3 class="mt-3 mb-0">Endereço Residencial</h3>
+      <hr class="my-1">
     </div> <!-- /col-md-12 -->
   </div>
   <form autocomplete="off">
