--- a/src/app/shell/shell.component.html
+++ b/src/app/shell/shell.component.html
@@ -38,9 +38,13 @@
           <a mat-list-item routerLink="/about" routerLinkActive="active" (click)="isMobile && sidenav.close()">
             <span>Temp</span>
           </a>
-          <a mat-list-item routerLink="/cadastro" routerLinkActive="active" (click)="isMobile && sidenav.close()">
-            <i class="feather icon-file-plus pe-2"></i>
-            <span>Cadastro</span>
+          <a mat-list-item routerLink="/cadastro/colaboradores" routerLinkActive="active" (click)="isMobile && sidenav.close()">
+            <i class="feather icon-users pe-2"></i>
+            <span>Colaboradores</span>
+          </a>
+          <a mat-list-item routerLink="/cadastro/especialidades" routerLinkActive="active" (click)="isMobile && sidenav.close()">
+            <i class="feather icon-bookmark pe-2"></i>
+            <span>Especialidades</span>
           </a>
           <!-- <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
             <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding routerLinkActive="active">
