--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -45,6 +45,7 @@
   --f_12: 12px;
   --f_14: 14px;
   --f_16: 16px;
+  --f_25: 25px;
   --tcc-bg-success-progress: #2ed8b6;
   --tcc-bg-info-progress: #70A6E8;
   --tcc-bg-warning-progress: rgb(252, 174, 115);
