--- a/src/app/@modules/cadastro/pages/especialidades/especialidades.component.html
+++ b/src/app/@modules/cadastro/pages/especialidades/especialidades.component.html
@@ -1,1 +1,27 @@
-<p>especialidades works!</p>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 mb-3">
+      <app-card-content>
+        <div class="row">
+          <div class="col-md-4">
+            <form action="">
+              <mat-form-field appearance="outline" class="w-100">
+                <mat-label>Pesquise pelo nome</mat-label>
+                <mat-icon matSuffix>search</mat-icon>
+                <input matInput cdkFocusInitial >
+              </mat-form-field>
+            </form>
+          </div> <!-- /col-md-4 -->
+          <div class="col-md-8 d-flex align-items-center justify-content-end ">
+            <button type="button" class="btn btn-primary" (click)="openDialog()">Nova especialidade</button>
+            <div>
+            </div>
+          </div>
+        </div>
+      </app-card-content>
+    </div>
+    <div class="col-12">
+      <app-table-especialidades></app-table-especialidades>
+    </div>
+  </div>
+</div>
