--- a/src/theme/_buttons.scss
+++ b/src/theme/_buttons.scss
@@ -1,5 +1,5 @@
 @import './general';
-$f_weigth: 600;
+$f_weigth: 400;
 
 .btn-primary-tcc {
   background-color: var(--tcc-primary) !important;
@@ -56,4 +56,11 @@ $f_weigth: 600;
   font-weight: $f_weigth;
   font-size: var(--f_16);
   width: 48%;
+}
+
+.btn-remove {
+  background-color: var(--tcc-inactive) !important;
+  color: var(--tcc-white) !important;
+  font-weight: $f_weigth;
+  font-size: var(--f_14);
 }
