chore(refactor): alterando theme das tabelas e ajustes gerais

--- a/src/app/@modules/cadastro/components/colaboradores/table-colaboradores/table-colaboradores.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/table-colaboradores/table-colaboradores.component.html
@@ -1,33 +1,48 @@
-<app-card-content>
-  <div class="row pt-2 m-0">
-    <div class="col-12">
-      <table class="table-sm w-100">
-        <thead class="table-light text-uppercase">
-          <tr>
-            <th scope="col">Nome</th>
-            <th scope="col">Idade</th>
-            <th scope="col">Tipo Sanguíneo</th>
-            <th scope="col"></th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let colaborador of colaboradores">
-            <td class="d-flex align-items-center">
-              <img [src]="verificaSexoUsuario(colaborador?.sexo)" alt="Icon" class="bg-profile d-inline-block">
-              <div class="d-inline-block name-profile">
-                <span class="d-block name">{{ colaborador?.name }}</span>
-                <span class="profile">{{ colaborador.perfil }}</span>
-              </div>
-            </td>
-            <td class="td-format">{{ colaborador?.idade }}</td>
-            <td class="td-format">{{ colaborador?.tipoSanguineo }}</td>
-            <td class="text-center">
-              <button mat-raised-button color="primary" type="button" class="btn-iniciar-consulta">Ver detalhes</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+<div class="row pt-2 m-0">
+  <div class="col-12 table-responsive">
+    <table class=" w-100">
+      <thead class="text-uppercase">
+        <tr class="text-left">
+          <th scope="col">Nome</th>
+          <th scope="col">Documento</th>
+          <th scope="col">Perfil</th>
+          <th scope="col">Data Registro</th>
+          <th scope="col">Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let colaborador of colaboradores" class="shadow-sm">
+          <td class="d-flex align-items-center">
+            <img [src]="verificaSexoUsuario(colaborador?.sexo)" alt="Icon" class="bg-profile d-inline-block">
+            <div class="d-inline-block name-profile">
+              <span class="d-block name">{{ colaborador?.name }}</span>
+              <span class="profile">{{ colaborador.email }}</span>
+            </div>
+          </td>
+          <td class="td-format">{{ colaborador?.documento }}</td>
+          <td class="td-format">{{ colaborador?.perfil }}</td>
+          <td class="td-format">{{ colaborador?.idade }}</td>
+          <td class="td-format width-td">
+            <div class="overlay-text">
+              {{ colaborador?.status === 'A' ? 'Ativo' : 'Inativo' }}
+            </div>
+            <div class="overlay-button">
+              <button mat-raised-button color="primary" type="button" class="btn-secondary me-2" (click)="openDialog(colaborador)">
+                <i class="feather icon-edit-2"></i> <!-- edit -->
+              </button>
+              <button mat-raised-button color="primary" type="button" class="btn-success me-2" *ngIf="colaborador?.status === 'I'">
+                <i class="feather icon-check-circle"></i> <!-- active user -->
+              </button>
+              <button mat-raised-button color="primary" type="button" class="btn-danger me-2" *ngIf="colaborador?.status === 'A'">
+                <i class="feather icon-trash-2"></i> <!-- inactive user -->
+              </button>
+            </div>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
-</app-card-content>
+</div>
+<!-- <app-card-content>
+</app-card-content> -->
 
