--- a/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
+++ b/src/app/@modules/home/components/charts/dados-gerais-clinica/dados-gerais-clinica.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6 col-sm-12 mt-sm-2 mt-md-0">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-primary">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-primary" [loadingLine]="loading" progressClass="progress-azul">
       <div class="card-body">
         <div class="row">
           <div class="col-sm-12">
@@ -30,7 +30,7 @@
     </app-card-content>
   </div>
   <div class="col-md-6 col-sm-12 mt-sm-2 mt-md-0">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-secondary">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-secondary" [loadingLine]="loading" progressClass="progress-verde">
       <div class="card-body">
         <div class="row">
           <div class="col-sm-12">
