--- a/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.html
+++ b/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.html
@@ -27,7 +27,7 @@
             {{ paciente?.status == 'A' ? 'Ativo' : 'Inativo'}}
           </td>
           <td class="text-center">
-            <button mat-raised-button color="primary" type="button" class="btn-iniciar-consulta px-3 py-0" (click)="openDetails(paciente)">ver detalhes</button>
+            <button mat-raised-button color="primary" type="button" class="btn-success px-3 py-0" (click)="openDetails(paciente)">ver detalhes</button>
           </td>
         </tr>
       </tbody>
