--- a/src/theme/_root.scss
+++ b/src/theme/_root.scss
@@ -1,5 +1,6 @@
 :root {
-  --tcc-bg-menu: #f1f3f6;
+  --tcc-bg-container: #f1f3f6;
+  --tcc-bg-menu: #FFF;
   --tcc-bg-body: #fafafa;
   --tcc-blue: #4099ff;
   --tcc-indigo: #6610f2;
@@ -29,7 +30,8 @@
   --tcc-warning: #ffc107;
   --tcc-danger: #F64E60;
   --tcc-light: #bcbcbc;
-  --tcc-dark: #212529;
+  // --tcc-dark: #212529;
+  --tcc-dark: #343a40;
   --tcc-bg-th: #F3F6F9;
   --tcc-text-color-cinza: #B5B5C3;
   --tcc-text-color-title: #464E5F;
