--- a/src/app/@modules/cadastro/cadastro.component.html
+++ b/src/app/@modules/cadastro/cadastro.component.html
@@ -1,54 +1,54 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12 mb-3">
-      <div class="row">
-        <div class="col-12 d-flex justify-content-between pe-0">
-          <h2 class="m-0">Filtro de Busca</h2>
-          <button type="button" class="btn btn-primary" (click)="openDialog()">Novo colaborador</button>
-        </div>
-        <div class="col-md-5">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Pesquise pelo nome ou CPF</mat-label>
-            <input
-              type="text"
-              matInput
-              placeholder="Digite aqui"
-              autocomplete="off"
-             ><!-- formControlName="username"-->
+      <app-card-content>
+        <div class="row">
+          <div class="col-12 d-flex justify-content-between pe-0">
+            <h2 class="m-0">Filtro de Busca</h2>
+            <button type="button" mat-raised-button class="btn-primary" (click)="openDialog()">Novo colaborador</button>
+          </div>
+          <div class="col-md-5">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Pesquise pelo nome ou CPF</mat-label>
+              <input
+                type="text"
+                matInput
+                placeholder="Digite aqui"
+                autocomplete="off"
+               ><!-- formControlName="username"-->
+                <!-- <mat-error>
+                  <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+                </mat-error> -->
+            </mat-form-field>
+          </div><!--/col-md-4-->
+          <div class="col-md-2">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Tipo</mat-label>
+              <mat-select> <!-- formControlName="username"-->
+                <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
+              </mat-select>
               <!-- <mat-error>
-                <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-              </mat-error> -->
-          </mat-form-field>
-        </div><!--/col-md-4-->
-        <div class="col-md-2">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Tipo</mat-label>
-            <mat-select> <!-- formControlName="username"-->
-              <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
-            </mat-select>
-            <!-- <mat-error>
-                <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-              </mat-error> -->
-          </mat-form-field>
-        </div><!--/col-md-2-->
-        <div class="col-md-2">
-          <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Status</mat-label>
-            <mat-select> <!-- formControlName="username"-->
-              <mat-option [value]="sexo.id" *ngFor="let sexo of listaStatus">{{ sexo.status }}</mat-option>
-            </mat-select>
-            <!-- <mat-error>
-                <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-              </mat-error> -->
-          </mat-form-field>
-        </div><!--/col-md-2-->
-        <div class="col-3 p-0 align-button">
-          <button class="btn btn-buscar p-2">Buscar</button>
-          <button class="btn btn-limpar p-2">Limpar</button>
+                  <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+                </mat-error> -->
+            </mat-form-field>
+          </div><!--/col-md-2-->
+          <div class="col-md-2">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Status</mat-label>
+              <mat-select> <!-- formControlName="username"-->
+                <mat-option [value]="sexo.id" *ngFor="let sexo of listaStatus">{{ sexo.status }}</mat-option>
+              </mat-select>
+              <!-- <mat-error>
+                  <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+                </mat-error> -->
+            </mat-form-field>
+          </div><!--/col-md-2-->
+          <div class="col-3 p-0 align-button">
+            <button mat-raised-button class="btn-warning p-2 w-75 h-75 me-3" type="button">Buscar</button>
+            <button mat-raised-button class="btn-limpar p-2 w-75 h-75" type="button">Limpar</button>
+          </div>
         </div>
-      </div>
-      <!-- <app-card-content>
-      </app-card-content> -->
+      </app-card-content>
     </div>
     <div class="col-12">
       <app-table-colaboradores></app-table-colaboradores>
