--- a/src/app/@modules/cadastro/components/colaboradores/cadastro-colaborador/cadastro-colaborador.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/cadastro-colaborador/cadastro-colaborador.component.html
@@ -3,24 +3,24 @@
     <i class="feather icon-x-circle" (click)="closeDialog()"></i>
   </div>
   <div class="col-12">
-    <h3 class="mt-0 mb-2">Perfil de Cadastro</h3>
+    <h2 class="mt-0 mb-2" *ngIf="!dadosColaborador?.update">Novo Colaborador</h2>
+    <h2 class="mt-0 mb-2" *ngIf="dadosColaborador?.update">Atualizar Colaborador</h2>
+    <hr class="my-1">
   </div>
-  <div class="col-12 pb-3">
-    <form action="">
-      <mat-radio-group aria-label="Select an option" [formControl]="radioForm">
-        <mat-radio-button value="1" >Auxiliar Adm</mat-radio-button>
-        <mat-radio-button value="2" >Médico</mat-radio-button>
-      </mat-radio-group>
-    </form>
-  </div>
+  <ng-container *ngIf="!dadosColaborador?.update">
+    <div class="col-12 mt-2">
+      <h3 class="mt-0 mb-2">Perfil de Cadastro</h3>
+    </div>
+    <div class="col-12 pb-3">
+      <form action="">
+        <mat-radio-group aria-label="Select an option" [formControl]="radioForm">
+          <mat-radio-button value="1" >Auxiliar Adm</mat-radio-button>
+          <mat-radio-button value="2" >Médico</mat-radio-button>
+        </mat-radio-group>
+      </form>
+    </div>
+  </ng-container>
   <div class="col-12">
-    <!-- Cadastro Auxiliar Adm-->
-    <ng-container *ngIf="radioForm.value === '1'">
-      <app-form-cadastro-colaborador type="1"></app-form-cadastro-colaborador>
-    </ng-container>
-    <!-- Cadastro Médico -->
-    <ng-container *ngIf="radioForm.value === '2'">
-      <app-form-cadastro-colaborador type="2"></app-form-cadastro-colaborador>
-    </ng-container>
+    <app-form-cadastro-colaborador [type]="radioForm.value"></app-form-cadastro-colaborador>
   </div>
 </div>
