--- a/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
@@ -10,90 +10,76 @@
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Nome</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite seu nome"
-            autocomplete="off"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite seu nome" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-4-->
+      </div>
+      <!--/col-md-4-->
       <div class="col-md-5">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Sobrenome</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite seu sobrenome"
-            autocomplete="off"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite seu sobrenome" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-5-->
+      </div>
+      <!--/col-md-5-->
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Data de Nascimento</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite sua Data de Nascimento"
-            autocomplete="off"
-            mask="00/00/0000"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite sua Data de Nascimento" autocomplete="off" mask="00/00/0000">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-3-->
+      </div>
+      <!--/col-md-3-->
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>CPF</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite seu CPF"
-            autocomplete="off"
-            mask="000.000.000-00"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite seu CPF" autocomplete="off" mask="000.000.000-00">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-3-->
+      </div>
+      <!--/col-md-3-->
       <div class="col-md-2">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Sexo</mat-label>
-          <mat-select> <!-- formControlName="username"-->
+          <mat-select>
+            <!-- formControlName="username"-->
             <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
           </mat-select>
           <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-2-->
+      </div>
+      <!--/col-md-2-->
       <div class="col-md-7">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>E-mail</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite seu e-mail"
-            autocomplete="off"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite seu e-mail" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-7-->
+      </div>
+      <!--/col-md-7-->
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Perfil</mat-label>
-          <mat-select> <!-- formControlName="username"-->
+          <mat-select>
+            <!-- formControlName="username"-->
             <mat-option [value]="perfil.id" *ngFor="let perfil of listaPerfil">{{perfil.name}}</mat-option>
           </mat-select>
           <!-- <mat-error>
@@ -108,113 +94,119 @@
             placeholder="Digite seu CPF"
             autocomplete="off">
         </mat-form-field> -->
-      </div><!--/col-md-3-->
+      </div>
+      <!--/col-md-3-->
     </div>
-  </form>
-  <div class="row">
-    <div class="col-md-12">
-      <h3 class="mt-3 mb-0">Endereço Residencial</h3>
-      <hr class="my-1">
-    </div> <!-- /col-md-12 -->
-  </div>
-  <form autocomplete="off">
     <div class="row">
+      <div class="col-md-12">
+        <h3 class="mt-3 mb-0">Dados Profissionais</h3>
+        <hr class="my-1">
+      </div> <!-- /col-md-12 -->
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>CEP</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite seu CEP"
-            autocomplete="off"
-            mask="00000-00"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <mat-label>Data da Inscrição</mat-label>
+          <input type="text" matInput placeholder="Digite seu CEP" mask="00/00/0000" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-3-->
+      </div>
+      <div class="col-md-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>CRM</mat-label>
+          <input type="text" matInput placeholder="Digite seu CEP" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
+              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+            </mat-error> -->
+        </mat-form-field>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <h3 class="mt-3 mb-0">Endereço Residencial</h3>
+        <hr class="my-1">
+      </div> <!-- /col-md-12 -->
+      <div class="col-md-3">
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>CEP</mat-label>
+          <input type="text" matInput placeholder="Digite seu CEP" autocomplete="off" mask="00000-00">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
+              <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+            </mat-error> -->
+        </mat-form-field>
+      </div>
+      <!--/col-md-3-->
       <div class="col-md-2">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Estado</mat-label>
-          <mat-select> <!-- formControlName="username"-->
+          <mat-select>
+            <!-- formControlName="username"-->
             <mat-option [value]="estado.id" *ngFor="let estado of listaEstados">{{estado.name}}</mat-option>
           </mat-select>
           <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-2-->
+      </div>
+      <!--/col-md-2-->
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Cidade</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite sua cidade"
-            autocomplete="off"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite sua cidade" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-3-->
+      </div>
+      <!--/col-md-3-->
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Logradouro</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite o logradouro"
-            autocomplete="off"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite o logradouro" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-4-->
+      </div>
+      <!--/col-md-4-->
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Bairro</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite seu bairro"
-            autocomplete="off"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite seu bairro" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-4-->
+      </div>
+      <!--/col-md-4-->
       <div class="col-md-2">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Número</mat-label>
-          <input
-            type="number"
-            matInput
-            placeholder="Digite o número"
-            autocomplete="off"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="number" matInput placeholder="Digite o número" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-2-->
+      </div>
+      <!--/col-md-2-->
       <div class="col-md-6">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Complemento</mat-label>
-          <input
-            type="text"
-            matInput
-            placeholder="Digite o complemento"
-            autocomplete="off"
-           ><!-- formControlName="username"-->
-            <!-- <mat-error>
+          <input type="text" matInput placeholder="Digite o complemento" autocomplete="off">
+          <!-- formControlName="username"-->
+          <!-- <mat-error>
               <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
             </mat-error> -->
         </mat-form-field>
-      </div><!--/col-md-6-->
+      </div>
+      <!--/col-md-6-->
     </div>
   </form>
   <div class="row d-flex justify-content-end ms-1 mt-4">
