--- a/src/app/@modules/cadastro/pages/detalhe-colaborador/detalhe-colaborador.component.html
+++ b/src/app/@modules/cadastro/pages/detalhe-colaborador/detalhe-colaborador.component.html
@@ -16,7 +16,7 @@
     <app-card-content>
       <div class="row">
         <div class="col-12">
-          <h2>{{ dadosPaciente?.name }}</h2>
+          <h2>{{ dadosColaborador?.name }}</h2>
         </div> <!-- /col-12-->
         <div class="col-12">
           <h3 class="m-0">Dados Pessoais</h3>
@@ -24,15 +24,15 @@
         </div>
         <div class="col-3">
           <span class="d-block label">CPF</span>
-          <span>{{ dadosPaciente?.documento }}</span>
+          <span>{{ dadosColaborador?.documento }}</span>
         </div>
         <div class="col-3">
           <span class="d-block label">Telefone</span>
-          <span>({{ dadosPaciente?.ddd }}) {{ dadosPaciente?.telefone }}</span>
+          <span>({{ dadosColaborador?.ddd }}) {{ dadosColaborador?.telefone }}</span>
         </div>
         <div class="col-3">
           <span class="d-block label">E-mail</span>
-          <span>{{ dadosPaciente?.email }}</span>
+          <span>{{ dadosColaborador?.email }}</span>
         </div>
       </div>
       <div class="row mt-3">
@@ -42,15 +42,15 @@
         </div>
         <div class="col-3">
           <span class="d-block label">Tipo Sanguíneo</span>
-          <span>{{ dadosPaciente?.dadosMedicos?.tipoSanguineo }}</span>
+          <span>{{ dadosColaborador?.dadosMedicos?.tipoSanguineo }}</span>
         </div>
         <div class="col-3">
           <span class="d-block label">Peso</span>
-          <span>{{ dadosPaciente?.dadosMedicos?.peso }}</span>
+          <span>{{ dadosColaborador?.dadosMedicos?.peso }}</span>
         </div>
         <div class="col-3">
           <span class="d-block label">Altura</span>
-          <span>{{ dadosPaciente?.dadosMedicos?.altura }}</span>
+          <span>{{ dadosColaborador?.dadosMedicos?.altura }}</span>
         </div>
       </div>
     </app-card-content>
