--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="col-12 text-center">
        <button type="button" mat-raised-button color="primary"
-        class="btn-iniciar-consulta" (click)="openDialog()">Cadastrar</button>
+        class="btn-success" (click)="openDialog()">Cadastrar</button>
     </div>
   </div>
 </app-card-content>
