--- a/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.html
+++ b/src/app/@modules/home/components/estatisticas-gerais/estatisticas-gerais.component.html
@@ -4,12 +4,12 @@
   </div>
 </div>
 <div class="row d-flex align-items-center my-1">
-  <div class="col-2 pe-0">
+  <div class="col-auto pe-3">
     <div class="bg-icon-progress-first bg-format-icon shadow-sm d-flex justify-content-center align-items-center">
       <i class="feather icon-activity"></i>
     </div>
   </div>
-  <div class="col-8 ps-0">
+  <div class="col-8 ps-0 mt-3">
     <div class="progress shadow-sm">
       <div class="progress-bar bg-secondary-progress" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
@@ -20,12 +20,12 @@
   </div>
 </div>
 <div class="row d-flex align-items-center my-1">
-  <div class="col-2 pe-0">
+  <div class="col-auto pe-3">
     <div class="bg-icon-progress-second bg-format-icon shadow-sm d-flex justify-content-center align-items-center">
       <i class="feather icon-activity"></i>
     </div>
   </div>
-  <div class="col-8 ps-0">
+  <div class="col-8 ps-0 mt-3">
     <div class="progress shadow-sm">
       <div class="progress-bar bg-success-progress" role="progressbar" style="width: 55%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
@@ -36,12 +36,12 @@
   </div>
 </div>
 <div class="row d-flex align-items-center my-1">
-  <div class="col-2 pe-0">
+  <div class="col-auto pe-3">
     <div class="bg-icon-progress-third bg-format-icon shadow-sm d-flex justify-content-center align-items-center">
       <i class="feather icon-activity"></i>
     </div>
   </div>
-  <div class="col-8 ps-0">
+  <div class="col-8 ps-0 mt-3">
     <div class="progress">
       <div class="progress-bar bg-primary-progress" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
     </div>
