--- a/src/app/@modules/home/components/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
+++ b/src/app/@modules/home/components/quantitativo-dados-clinica/quantitativo-dados-clinica.component.html
@@ -1,6 +1,6 @@
 <div class="row m-0">
   <div class="col-md-6 col-sm-12">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-thirt">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-thirt" [loadingLine]="loading" progressClass="progress-laranja">
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -25,7 +25,7 @@
     </app-card-content>
   </div>
   <div class="col-md-6 col-sm-12">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-secondary">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-secondary" [loadingLine]="loading" progressClass="progress-verde">
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -52,7 +52,7 @@
 </div>
 <div class="row pt-3 m-0">
   <div class="col-md-6 col-sm-12">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-four">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-four" [loadingLine]="loading" progressClass="progress-vermelho">
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
@@ -77,7 +77,7 @@
     </app-card-content>
   </div>
   <div class="col-md-6 col-sm-12">
-    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-primary">
+    <app-card-content cardClass="padd-footer" isCardFooter="true" footerClass="bg-card-primary" [loadingLine]="loading" progressClass="progress-azul">
       <div class="card-body">
         <div class="row m-0">
           <div class="col-sm-8">
