--- a/src/app/@modules/paciente/paciente.component.html
+++ b/src/app/@modules/paciente/paciente.component.html
@@ -1,31 +1,39 @@
 <div class="bg">
   <div class="container-fluid pt-3">
-    <app-card-content>
-      <div class="row">
-        <div class="col-md-4">
-          <form action="">
-            <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Pesquise usuários por nome ou Documento</mat-label>
-              <mat-icon matSuffix>search</mat-icon>
-              <input matInput>
-            </mat-form-field>
-          </form>
-        </div> <!-- /col-md-4 -->
-        <div class="col-md-8 d-flex align-items-center justify-content-end ">
-          <button type="button" mat-raised-button color="primary" class="px-3 py-0" (click)="openDialog()">Nova consulta</button>
-          <div>
+    <div class="row">
+      <div class="col-12 mb-3">
+        <app-card-content>
+          <div class="row">
+            <div class="col-md-4">
+              <form action="">
+                <mat-form-field appearance="outline" class="w-100">
+                  <mat-label>Pesquise usuários por nome ou Documento</mat-label>
+                  <mat-icon matSuffix>search</mat-icon>
+                  <input matInput>
+                </mat-form-field>
+              </form>
+            </div> <!-- /col-md-4 -->
+            <div class="col-md-8 d-flex align-items-center justify-content-end ">
+              <button type="button" mat-raised-button color="primary" class="px-3 py-0" (click)="openDialog()">Nova consulta</button>
+              <div>
+              </div>
+            </div>
           </div>
-        </div>
+        </app-card-content>
       </div>
-      <!-- VISÃO FUNCIONÁRIO -->
-      <ng-container *ngIf="true">
-       <app-table-pacientes></app-table-pacientes>
-      </ng-container>
-      <!-- VISÃO MÉDICO -->
-      <ng-container *ngIf="false">
-        <app-table-medico></app-table-medico>
-      </ng-container>
-    </app-card-content>
+      <div class="col-12">
+        <app-card-content>
+          <!-- VISÃO FUNCIONÁRIO -->
+          <ng-container *ngIf="false">
+           <app-table-pacientes></app-table-pacientes>
+          </ng-container>
+          <!-- VISÃO MÉDICO -->
+          <ng-container *ngIf="true">
+            <app-table-medico></app-table-medico>
+          </ng-container>
+        </app-card-content>
+      </div>
+    </div>
   </div>
 </div>
 <!-- <app-loader size="1.5" [isLoading]="isLoading"></app-loader> -->
