--- a/src/theme/_general.scss
+++ b/src/theme/_general.scss
@@ -17,7 +17,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #37474F;
   background-color: #fff;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -29,6 +29,10 @@ hr {
   background-color: currentColor;
   border: 0;
   opacity: 0.25;
+}
+
+.mat-drawer-container {
+  background-color: var(--tcc-bg-container);
 }
 
 hr:not([size]) {
