--- a/src/theme/theme-variables.scss
+++ b/src/theme/theme-variables.scss
@@ -25,3 +25,8 @@ $app-theme: mat-light-theme($app-primary, $app-accent, $app-warn);
 
 // Material design icons font path
 $material-design-icons-font-directory-path: "~material-design-icons-iconfont/dist/fonts/";
+
+.swal2-icon {
+  width: 4rem !important;
+  height: 4rem !important;
+}
