chore(configuracoes): implementando página de Configurações e ajustes

--- a/src/app/@modules/cadastro/components/colaboradores/table-colaboradores/table-colaboradores.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/table-colaboradores/table-colaboradores.component.html
@@ -24,38 +24,23 @@
           <td class="td-format">{{ colaborador?.idade }}</td>
           <td class="td-format width-td">
             <div class="overlay-text">
-              {{ colaborador?.status === 'A' ? 'Ativo' : 'Inativo' }}
+              <span class="badge bg-primary"
+                [ngClass]="{'bg-success': colaborador?.status === 'A', 'bg-danger': colaborador?.status === 'I'}">
+                {{ colaborador?.status === 'A' ? 'Ativo' : 'Inativo' }}
+              </span>
             </div>
             <div class="overlay-button">
-              <button
-                mat-raised-button
-                color="primary"
-                type="button"
-                class="btn-secondary me-2"
-                (click)="openDialog(colaborador)"
-              >
+              <button mat-raised-button color="primary" type="button" class="btn-secondary me-2"
+                (click)="openDialog(colaborador)">
                 <i class="feather icon-edit-2"></i>
-                <!-- edit -->
               </button>
-              <button
-                mat-raised-button
-                color="primary"
-                type="button"
-                class="btn-success me-2"
-                *ngIf="colaborador?.status === 'I'"
-              >
+              <button mat-raised-button color="primary" type="button" class="btn-success me-2"
+                *ngIf="colaborador?.status === 'I'">
                 <i class="feather icon-check-circle"></i>
-                <!-- active user -->
               </button>
-              <button
-                mat-raised-button
-                color="primary"
-                type="button"
-                class="btn-danger me-2"
-                *ngIf="colaborador?.status === 'A'"
-              >
-                <i class="feather icon-trash-2"></i>
-                <!-- inactive user -->
+              <button mat-raised-button color="primary" type="button" class="btn-danger me-2"
+                *ngIf="colaborador?.status === 'A'">
+                <i class="feather icon-x"></i>
               </button>
             </div>
           </td>
@@ -64,5 +49,3 @@
     </table>
   </div>
 </div>
-<!-- <app-card-content>
-</app-card-content> -->
