--- a/src/app/@modules/paciente/components/prontuario-medico/prontuario-medico.component.html
+++ b/src/app/@modules/paciente/components/prontuario-medico/prontuario-medico.component.html
@@ -3,7 +3,7 @@
     <!-- Cabeçalho -->
     <div class="row m-0">
       <div class="col-12 d-flex align-items-center mb-2">
-        <img src="../../../../../assets/logo-svg.svg" alt="" />
+        <img src="../../../../../assets/logo-svg.svg" alt="Logo"/>
         <h1 class="m-0 d-inline ps-2">IHealth</h1>
       </div>
       <div class="col-12 my-1">
