--- a/src/app/@modules/paciente/components/table-medico/table-medico.component.html
+++ b/src/app/@modules/paciente/components/table-medico/table-medico.component.html
@@ -1,7 +1,7 @@
 <div class="row pt-4">
-  <div class="col-12">
-    <table class="table-sm w-100">
-      <thead class="table-light text-uppercase">
+  <div class="col-12 table-responsive">
+    <table class="w-100">
+      <thead class="text-uppercase">
         <tr>
           <th scope="col">Nome</th>
           <th scope="col">Idade</th>
