--- a/src/app/@shared/card-content/card-content.component.html
+++ b/src/app/@shared/card-content/card-content.component.html
@@ -1,5 +1,10 @@
 <mat-card [ngClass]="cardClass">
   <mat-progress-bar mode="indeterminate" *ngIf="loadingLine" [ngClass]="progressClass"></mat-progress-bar>
+  <div *ngIf="isHeader">
+    <ng-content select=".card-header"></ng-content>
+
+    <hr class="mb-2 mt-1">
+  </div>
   <mat-card-content>
     <div class="card-content">
       <ng-content></ng-content>
