--- a/src/theme/_general.scss
+++ b/src/theme/_general.scss
@@ -2318,3 +2318,78 @@ progress {
 .bg-success-progress {
   background-color: var(--tcc-bg-success-progress) !important;
 }
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
+
+.img-thumbnail {
+  padding: 0.25rem;
+  background-color: #fff;
+  border: 1px solid #dee2e6;
+  border-radius: 0.25rem;
+  max-width: 100%;
+  max-height: 150px;
+}
+
+.badge {
+  display: inline-block;
+  padding: 0.35em 0.65em;
+  font-size: var(--f_14);
+  font-weight: 700;
+  line-height: 1;
+  color: #fff;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: baseline;
+  border-radius: 0.25rem;
+}
+
+.badge:empty {
+  display: none;
+}
+
+.bg-primary {
+  background-color: var(--tcc-primary) !important;
+}
+
+.bg-secondary {
+  background-color: var(--tcc-secondary) !important;
+}
+
+.bg-success {
+  background-color: var(--tcc-success) !important;
+}
+
+.bg-info {
+  background-color: var(--info) !important;
+}
+
+.bg-warning {
+  background-color: var(--warning) !important;
+}
+
+.bg-danger {
+  background-color: var(--danger) !important;
+}
+
+.bg-light {
+  background-color: var(--light) !important;
+}
+
+.bg-dark {
+  background-color: var(--dark) !important;
+}
+
+.bg-body {
+  background-color: var(--tcc-bg-body) !important;
+}
+
+.bg-white {
+  background-color: #fff !important;
+}
+
+.bg-transparent {
+  background-color: transparent !important;
+}
