--- a/src/app/@modules/cadastro/cadastro.component.html
+++ b/src/app/@modules/cadastro/cadastro.component.html
@@ -5,9 +5,9 @@
         <div class="row">
           <div class="col-12 d-flex justify-content-between pe-0">
             <h2 class="m-0">Filtro de Busca</h2>
-            <button type="button" mat-raised-button class="btn-primary" (click)="openDialog()">Novo colaborador</button>
+            <!-- <button type="button" mat-raised-button class="btn-primary" (click)="openDialog()">Novo colaborador</button> -->
           </div>
-          <div class="col-md-5">
+          <div class="col-md-5 col-sm-12">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Pesquise pelo nome ou CPF</mat-label>
               <input
@@ -22,7 +22,7 @@
             </mat-form-field>
           </div>
           <!--/col-md-4-->
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-12">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Tipo</mat-label>
               <mat-select>
@@ -35,7 +35,7 @@
             </mat-form-field>
           </div>
           <!--/col-md-2-->
-          <div class="col-md-2">
+          <div class="col-md-2 col-sm-12">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Status</mat-label>
               <mat-select>
@@ -48,9 +48,9 @@
             </mat-form-field>
           </div>
           <!--/col-md-2-->
-          <div class="col-3 p-0 align-button">
+          <div class="col-md-3 p-md-0 align-button col-sm-12">
             <button mat-raised-button class="btn-warning p-2 w-75 h-75 me-3" type="button">Buscar</button>
-            <button mat-raised-button class="btn-limpar p-2 w-75 h-75" type="button">Limpar</button>
+            <button mat-raised-button class="btn-primary p-2 w-100 h-75" type="button" (click)="openDialog()">Novo colaborador</button>
           </div>
         </div>
       </app-card-content>
