--- a/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
+++ b/src/app/@modules/cadastro/components/colaboradores/form-cadastro-colaborador/form-cadastro-colaborador.component.html
@@ -9,7 +9,7 @@
   <!-- /row -->
   <form autocomplete="off">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Nome</mat-label>
           <input type="text" matInput placeholder="Digite seu nome" autocomplete="off" />
@@ -20,7 +20,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-4-->
-      <div class="col-md-5">
+      <div class="col-md-5 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Sobrenome</mat-label>
           <input type="text" matInput placeholder="Digite seu sobrenome" autocomplete="off" />
@@ -31,7 +31,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-5-->
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Data de Nascimento</mat-label>
           <input
@@ -48,7 +48,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-3-->
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>CPF</mat-label>
           <input type="text" matInput placeholder="Digite seu CPF" autocomplete="off" mask="000.000.000-00" />
@@ -59,7 +59,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-3-->
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Sexo</mat-label>
           <mat-select>
@@ -72,7 +72,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-2-->
-      <div class="col-md-7">
+      <div class="col-md-7 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>E-mail</mat-label>
           <input type="text" matInput placeholder="Digite seu e-mail" autocomplete="off" />
@@ -83,7 +83,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-7-->
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Perfil</mat-label>
           <mat-select>
@@ -111,7 +111,7 @@
         <hr class="my-1" />
       </div>
       <!-- /col-md-12 -->
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Data da Inscrição</mat-label>
           <input type="text" matInput placeholder="Digite seu CEP" mask="00/00/0000" autocomplete="off" />
@@ -121,7 +121,7 @@
             </mat-error> -->
         </mat-form-field>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>CRM</mat-label>
           <input type="text" matInput placeholder="Digite seu CEP" autocomplete="off" />
@@ -133,7 +133,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 col-sm-12">
         <h3 class="mt-3 mb-0">Endereço Residencial</h3>
         <hr class="my-1" />
       </div>
@@ -149,7 +149,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-3-->
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Estado</mat-label>
           <mat-select>
@@ -162,7 +162,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-2-->
-      <div class="col-md-3">
+      <div class="col-md-3 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Cidade</mat-label>
           <input type="text" matInput placeholder="Digite sua cidade" autocomplete="off" />
@@ -173,7 +173,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-3-->
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Logradouro</mat-label>
           <input type="text" matInput placeholder="Digite o logradouro" autocomplete="off" />
@@ -184,7 +184,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-4-->
-      <div class="col-md-4">
+      <div class="col-md-4 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Bairro</mat-label>
           <input type="text" matInput placeholder="Digite seu bairro" autocomplete="off" />
@@ -195,7 +195,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-4-->
-      <div class="col-md-2">
+      <div class="col-md-2 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Número</mat-label>
           <input type="number" matInput placeholder="Digite o número" autocomplete="off" />
@@ -206,7 +206,7 @@
         </mat-form-field>
       </div>
       <!--/col-md-2-->
-      <div class="col-md-6">
+      <div class="col-md-6 col-sm-12">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Complemento</mat-label>
           <input type="text" matInput placeholder="Digite o complemento" autocomplete="off" />
@@ -220,10 +220,10 @@
     </div>
   </form>
   <div class="row d-flex justify-content-end ms-1 mt-4">
-    <div class="col-2 p-0">
+    <div class="col-2 p-0 col-sm-6">
       <button class="btn btn-secondary-tcc p-2">limpar</button>
     </div>
-    <div class="col-2 p-0">
+    <div class="col-2 p-0 col-sm-6">
       <button class="btn btn-primary-tcc p-2">salvar</button>
     </div>
   </div>
